...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/titleMovie"
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{detailMovie.detail.responseDetailMovie.title}"
                            android:textStyle="bold"
...
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:text="@{detailMovie.detail.responseDetailMovie.tagline}"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            app:layout_constraintBottom_toTopOf="@id/bookmark"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardPoster" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/bookmark"
...
                            android:text="@string/information"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textStatus"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toTopOf="@id/textReleaseDate"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInformation"
                            app:statusReleased="@{detailMovie.detail.responseDetailMovie.status}"
                            tools:text="@string/app_name" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textReleaseDate"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toTopOf="@id/textBudget"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textStatus"
                            app:releaseDate="@{detailMovie.detail.responseDetailMovie.releaseDate}"
                            tools:text="@string/app_name" />

...
                            android:id="@+id/textBudget"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:budget="@{detailMovie.detail.responseDetailMovie.budget}"
                            app:layout_constraintBottom_toTopOf="@id/textRevenue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"
                            tools:text="@string/app_name" />

                        <com.google.android.material.textview.MaterialTextView
...
                            android:text="@string/overview"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textOverview"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="8dp"
                            android:paddingBottom="10dp"
...
