...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/titleTv"
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@{detailTv.detail.responseDetailTV.name}"
...
                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardPoster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            app:cardCornerRadius="15dp"
                            app:layout_constraintBottom_toTopOf="@id/bookmark"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ratingBar">

                            <ImageView
                                android:id="@+id/imgItemPhoto"
...
                            android:text="@string/information"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textStatus"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toTopOf="@id/firstAirDate"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInformation"
                            app:statusReleased="@{detailTv.detail.responseDetailTV.status}"
                            tools:text="@string/app_name" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/firstAirDate"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toTopOf="@id/numberOfEpisodes"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textStatus"
                            app:releaseDate="@{detailTv.detail.responseDetailTV.firstAirDate}"
                            tools:text="@string/app_name" />

...
                            android:id="@+id/numberOfEpisodes"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:episodesTV="@{detailTv.detail.responseDetailTV.numberOfEpisodes}"
                            app:layout_constraintBottom_toTopOf="@id/numberOfSeasons"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/numberOfSeasons"
                            tools:text="@string/app_name" />

                        <com.google.android.material.textview.MaterialTextView
...
                            android:text="@string/overview"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textOverview"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="8dp"
                            android:paddingBottom="10dp"
...
